test/files/errors/define_missing_symbol.scm
; Test: Define with missing symbol - should return exit code 84
(define)
